added notebook documenting how data was originally sourced from datausa.io

--- a/index.Rmd
+++ b/index.Rmd
@@ -33,7 +33,7 @@ output:
 
 # Introduction to Data Science
 
-This is an open source textbook aimed at introducing undergraduate students to Data Science. It was originally written for the University of British Columbia's [DSCI 100 - Introduction to Data Science course](https://ubc-dsci.github.io/dsci-100/). 
+This is an open source textbook aimed at introducing undergraduate students to Data Science. It was originally written for the University of British Columbia's [DSCI 100 - Introduction to Data Science course](https://ubc-dsci.github.io/dsci-100/). In this book and course we define data science as the processes used to obtain value (i.e., insight) from data through reproducible and auditable processes.
 
 This course uses Jupyter and the R programming language to illustrate how to solve 4 common problems in Data Science:
 
@@ -64,7 +64,9 @@ By the end of the chapter, students will be able to:
 
 ## Jupyter notebooks
 
-Jupyter Notebooks are documents that contain a mix of computer code (and its output) and formattable text. Given that they can mix these two things in a single document (code is not separate from the output or written report), they are one of the leading tools to create reproducible data analysis. The name Jupyter came from combining the names of the three programming language that it was initially targeted for (Julia, Python, and R), and now many other languages can be used with Jupyter notebooks. 
+Jupyter Notebooks are documents that contain a mix of computer code (and its output) and formattable text. Given that they can mix these two things in a single document (code is not separate from the output or written report), they are one of the leading tools to create reproducible data analysis. A reproducible data analysis is one where you can reliably and easily recreate the same results when reanalyzing the same data. This sounds like this is something that should always happen with any data analysis, but in reality this is not often the case and one needs to make concious effort in the way they do their data analysis to ensure that it is reproducible.
+
+The name Jupyter came from combining the names of the three programming language that it was initially targeted for (Julia, Python, and R), and now many other languages can be used with Jupyter notebooks. 
 
 A notebook looks like this:
 
