some small changes

--- a/index.Rmd
+++ b/index.Rmd
@@ -112,7 +112,7 @@ DE,54976,228500,926454,24.45553333,democrat
 
 Below we demonstrate the code used to load the data into R. To do this, we first need to load the `tidyverse` library. We have to do this because the `read_csv` function was not included in the base installation of R, and so to be able to use it we have to load it from somewhere else - an R library called the `tidyverse` (more on this later). We do this using the library function. 
 
-Next we call the `read_csv` function and pass it a single argument, the name of the file - "state_property_data.csv". We have to put quotes around filenames and other letters and words that we use in our code to distinguish it from the special words that make up R programming language.  This is the only argument we need to provide for this file because our file satifies everthing else the `read_csv` function expects of files in the default use case (which we just discussed). Later in the course, we'll learn more about how to deal with files where the default arguments are not appropriate, for example files that use spaces or tabs to separate the columns, or with no column names (headers).
+Next we call the `read_csv` function and pass it a single argument, the name of the file - "state_property_data.csv". We have to put quotes around filenames and other letters and words that we use in our code to distinguish it from the special words that make up R programming language.  This is the only argument we need to provide for this file because our file satifies everthing else the `read_csv` function expects of files in the default use case (which we just discussed). Later in the course, we'll learn more about how to deal with files where the default arguments are not appropriate. For example, files that use spaces or tabs to separate the columns, or with no column names (headers).
 
 ```{r load state property data, warning=FALSE, message=FALSE}
 library(tidyverse)
