--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -2,7 +2,7 @@
 
 ## Overview 
 
-Learn to read in various cases of tabular data sets locally and from the web. Once read in, these data sets will be used to walk through a real world Data Science application that includes wrangling the data into a useable format and creating an effective data visualization.
+Learn to read in various types of tabular data sets locally and from the web. Once read in, these data sets will be used to walk through a real world Data Science application that includes wrangling the data into a useable format and creating an effective data visualization.
 
 ## Chapter learning objectives
 By the end of the chapter, students will be able to:
